--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,1 +1,5 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+#carousel img {
+  height: auto;
+  max-height: 70vh;
+}
+/*# sourceMappingURL=style.css.map */
